--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+#Please remove all the comments
+URL_SHORTENER_WEB_PROTOCOL=http#Either http or https
+URL_SHORTENER_WEB_DOMAIN=localhost#The assigned domain
+URL_SHORTENER_WEB_PORT=9010#The assigned port, empty if port 80
+
 DB_CONNECTIONS=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
