--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 #Please remove all the comments
+URL_SHORTENER_API_PROTOCOL=http#Either http or https
+URL_SHORTENER_API_DOMAIN=localhost#The assigned domain
+URL_SHORTENER_API_PORT=9000#The assigned port, empty if port 80
+
 URL_SHORTENER_WEB_PROTOCOL=http#Either http or https
 URL_SHORTENER_WEB_DOMAIN=localhost#The assigned domain
 URL_SHORTENER_WEB_PORT=9020#The assigned port, empty if port 80
