--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@quasar/extras": "^1.0.0",
     "apexcharts": "^3.35.5",
     "axios": "^0.21.1",
+    "crypto-js": "^4.1.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
