Used local storage to validate routes that does not require authentication

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ URL_SHORTENER_API_PORT=9000#The assigned port, empty if port 80
 URL_SHORTENER_WEB_PROTOCOL=http#Either http or https
 URL_SHORTENER_WEB_DOMAIN=localhost#The assigned domain
 URL_SHORTENER_WEB_PORT=9020#The assigned port, empty if port 80
+
+LOCAL_STORAGE_KEY_AUTHENTICATED=is_authenticated
